# Wolfen

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
cmake/: base.cmake  compilers.cmake  libraries.cmake
include/: utils.hpp
include/core/: Assets.hpp  Display.hpp  Engine.hpp  Map.hpp  Raycaster.hpp
include/entity/: IEntity.hpp  Player.hpp
include/utils/: common.hpp  settings.hpp  types.hpp
src/: main.cpp
src/core/: Assets.cpp  Display.cpp  Engine.cpp  Map.cpp  Raycaster.cpp
src/entity/: Player.cpp
src/utils/: types.cpp
